Added the services block

--- a/src/index.html
+++ b/src/index.html
@@ -48,5 +48,61 @@
             </div>
         </div>
     </section>
+    <div class="bloob-header">
+        <img src="icons/bloobs/left_bloob_01.png" alt="bloob">
+    </div>
+    <section class="services">
+        <div class="container">
+            <div class="subtitle subtitle_center">Our Services</div>
+            <div class="title title_center">Why People Choose Us</div>
+            <div class="services__cards">
+                <div class="services__cards-item">
+                    <img src="img/benefits/design.png" alt="design" class="services__cards-img">
+                    <div class="title title__cards">Design</div>
+                    <div class="description description__cards">
+                        a plan or drawing produced to show the look and function
+                    </div>
+                    <div class="services__cards-more">
+                        <a href="#">Learn more</a>
+                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                    </div>
+                </div>
+                <div class="services__cards-item">
+                    <img src="img/benefits/development.png" alt="development" class="services__cards-img">
+                    <div class="title title__cards">Development</div>
+                    <div class="description description__cards">
+                        Development is defined as the process of growth
+                    </div>
+                    <div class="services__cards-more">
+                        <a href="#">Learn more</a>
+                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                    </div>
+                </div>
+                <div class="services__cards-item">
+                    <img src="img/benefits/branding.png" alt="branding" class="services__cards-img">
+                    <div class="title title__cards">Branding</div>
+                    <div class="description description__cards">
+                        The marketing practice of creating a name, symbols
+                    </div>
+                    <div class="services__cards-more">
+                        <a href="#">Learn more</a>
+                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                    </div>
+                </div>
+                <div class="services__cards-item">
+                    <img src="img/benefits/illustration.png" alt="illustration" class="services__cards-img">
+                    <div class="title title__cards">Illustration</div>
+                    <div class="description description__cards">
+                        An illustration is a decoration, interpretation
+                    </div>
+                    <div class="services__cards-more">
+                        <a href="#">Learn more</a>
+                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/show.js"></script>
 </body>
 </html>
