Added blocks of things and teamwork

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </section>
-    <div class="bloob-header">
+    <div class="bloob bloob-header">
         <img src="icons/bloobs/left_bloob_01.png" alt="bloob">
     </div>
     <section class="services">
@@ -103,6 +103,60 @@
             </div>
         </div>
     </section>
+    <section class="illustration">
+        <div class="container">
+            <div class="illustration__wrapper">
+                <div class="illustration__img">
+                    <img src="img/illustrations/illustration_02.png" alt="illustration">
+                </div>
+                <div class="illustration__info">
+                    <div class="illustration__block">
+                        <div class="subtitle">Design Things</div>
+                    </div>
+                    <div class="title">
+                        We Loves To Design
+                        Your Creative Ideas
+                    </div>
+                    <div class="description">
+                        A creative concept is an overarching “Big Idea” that<br> captures audience interest, 
+                        influences their emotional<br> response and inspires them to take action.
+                        It is a unifying<br> theme that can be used across all campaign messages 
+                    </div>
+                    <button class="button">Learn more</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="bloob bloob-design">
+        <img src="icons/bloobs/right_bloob_01.png" alt="bloob">
+    </div>
+    <section class="illustration">
+        <div class="container">
+            <div class="illustration__wrapper">
+                <div class="illustration__info">
+                    <div class="illustration__block">
+                        <div class="subtitle subtitle__teamwork">Our Teamwork</div>
+                    </div>
+                    <div class="title">
+                        We Believe Success 
+                        Lies On Teamwork
+                    </div>
+                    <div class="description">
+                        Good teamwork means a synergistic way of working with<br> each person committed and working towards 
+                        a shared<br> goal. ... It is therefore a necessity that leaders facilitate<br> and build the teamwork 
+                        skills of their people if they are 
+                    </div>
+                    <button class="button">Learn more</button>
+                </div>
+                <div class="illustration__img">
+                    <img src="img/illustrations/illustration_03.png" alt="illustration">
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="bloob bloob-teamwork">
+        <img src="icons/bloobs/left_bloob_02.png" alt="bloob">
+    </div>
     <script src="js/show.js"></script>
 </body>
 </html>
