Added the testimonial block

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                         We Loves To Design
                         Your Creative Ideas
                     </div>
-                    <div class="description">
+                    <div class="description description__illustration">
                         A creative concept is an overarching “Big Idea” that<br> captures audience interest, 
                         influences their emotional<br> response and inspires them to take action.
                         It is a unifying<br> theme that can be used across all campaign messages 
@@ -141,7 +141,7 @@
                         We Believe Success 
                         Lies On Teamwork
                     </div>
-                    <div class="description">
+                    <div class="description description__illustration">
                         Good teamwork means a synergistic way of working with<br> each person committed and working towards 
                         a shared<br> goal. ... It is therefore a necessity that leaders facilitate<br> and build the teamwork 
                         skills of their people if they are 
@@ -157,6 +157,96 @@
     <div class="bloob bloob-teamwork">
         <img src="icons/bloobs/left_bloob_02.png" alt="bloob">
     </div>
-    <script src="js/show.js"></script>
+    <section class="testimonial">
+        <div class="container">
+            <div class="testimonial__slider">
+                <div class="testimonial__wrapper">
+                    <div class="testimonial__person">
+                        <img src="img/people/man_01.png" alt="man">
+                    </div>
+                    <div class="testimonial__description">
+                        <div class="subtitle">Testimonial</div>
+                        <div class="title">
+                            Thats What Our 
+                            Client Says About Us
+                        </div>
+                        <div class="description description__testimonial">
+                            “Heartiest congratulations to the team for Future projects. I extend thankful wishes 
+                            and wish the team best of luck for the future assignments to come. Your effort is gladly”
+                        </div>
+                        <div class="testimonial__name">Jorge Morrison</div>
+                        <div class="testimonial__location">
+                            <p>North California,USA</p>
+                            <div class="testimonial__button">
+                                <button type="button" class="prev">
+                                    <img src="icons/arrows/arrow_left_grey.png" alt="arrow">
+                                </button>
+                                <button type="button" class="next">
+                                    <img src="icons/arrows/arrow_right_grey.png" alt="arrow">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial__wrapper">
+                    <div class="testimonial__person">
+                        <img src="img/people/man_02.png" alt="man">
+                    </div>
+                    <div class="testimonial__description">
+                        <div class="subtitle">Testimonial</div>
+                        <div class="title">
+                            Thats What Our 
+                            Client Says About Us
+                        </div>
+                        <div class="description description__testimonial">
+                            "This is the best creative agency I have ever seen. The staff is very friendly and honest. 
+                            I really liked everything. I want to order more work in the future"
+                        </div>
+                        <div class="testimonial__name">Paul Lee</div>
+                        <div class="testimonial__location">
+                            <p>Paris,Europe</p>
+                            <div class="testimonial__button">
+                                <button type="button" class="prev">
+                                    <img src="icons/arrows/arrow_left_grey.png" alt="arrow">
+                                </button>
+                                <button type="button" class="next">
+                                    <img src="icons/arrows/arrow_right_grey.png" alt="arrow">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial__wrapper">
+                    <div class="testimonial__person">
+                        <img src="img/people/man_03.png" alt="man">
+                    </div>
+                    <div class="testimonial__description">
+                        <div class="subtitle">Testimonial</div>
+                        <div class="title">
+                            Thats What Our 
+                            Client Says About Us
+                        </div>
+                        <div class="description description__testimonial">
+                            "This creative agency was recommended to me by my best friend. I want to say that it is amazing. 
+                            They did an excellent job for me. I will advise them in the future"
+                        </div>
+                        <div class="testimonial__name">Marol Scott</div>
+                        <div class="testimonial__location">
+                            <p>Spain,Europe</p>
+                            <div class="testimonial__button">
+                                <button type="button" class="prev">
+                                    <img src="icons/arrows/arrow_left_grey.png" alt="arrow">
+                                </button>
+                                <button type="button" class="next">
+                                    <img src="icons/arrows/arrow_right_grey.png" alt="arrow">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/slider.js"></script>
 </body>
 </html>
