Added the new sections to the project

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="services__cards-more">
                         <a href="#">Learn more</a>
-                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                        <img src="icons/arrows/next.png" alt="next">
                     </div>
                 </div>
                 <div class="services__cards-item">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="services__cards-more">
                         <a href="#">Learn more</a>
-                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                        <img src="icons/arrows/next.png" alt="next">
                     </div>
                 </div>
                 <div class="services__cards-item">
@@ -86,7 +86,7 @@
                     </div>
                     <div class="services__cards-more">
                         <a href="#">Learn more</a>
-                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                        <img src="icons/arrows/next.png" alt="next">
                     </div>
                 </div>
                 <div class="services__cards-item">
@@ -97,7 +97,7 @@
                     </div>
                     <div class="services__cards-more">
                         <a href="#">Learn more</a>
-                        <a href="#"><img src="icons/arrows/next.png" alt="next"></a>
+                        <img src="icons/arrows/next.png" alt="next">
                     </div>
                 </div>
             </div>
@@ -247,6 +247,73 @@
             </div>
         </div>
     </section>
+    <section class="partners">
+        <div class="container">
+            <div class="partners__wrapper">
+                <img src="icons/partners/ferrari.png" alt="ferrari" class="partners__img">
+                <img src="icons/partners/microsoft.png" alt="microsoft" class="partners__img">
+                <img src="icons/partners/geographic.png" alt="geographic" class="partners__img">
+                <img src="icons/partners/deloitte.png" alt="deloitte" class="partners__img">
+                <img src="icons/partners/google.png" alt="google" class="partners__img">
+            </div>
+        </div>
+    </section>
+    <section class="blog">
+        <div class="container">
+            <div class="blog__wrapper">
+                <div class="blog__img">
+                    <img src="img/illustrations/illustration_04.png" alt="illustration">
+                </div>
+                <div class="blog__description">
+                    <div class="title title__blog">Subscribe To Our Blog</div>
+                    <div class="description description__blog">
+                        A newsletter is a tool used to communicate regularly with
+                        your subscribers, delivering the information
+                    </div>
+                    <form action="#" method="post" id="blog" class="blog__form">
+                        <div class="blog__form-wrapper">
+                            <div class="email">
+                                <img src="icons/email.png" alt="email" id="email" class="email__photo">
+                                <input type="email" name="email" placeholder="Type Your Email Address" maxlength="30" required>
+                            </div>
+                            <button class="button button__blog">Send now</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="logo logo_big">Mi<span>rage</span></div>
+                <div class="footer__location">
+                    <div class="description">560 N Riverview D Ste 658</div>
+                    <div class="description">North Carolina DA 598745 USA</div>
+                </div>
+                <div class="description description__networks">Follow us on</div>
+                <div class="footer__networks">
+                    <div class="footer__networks-item">
+                        <a href="#"><img src="icons/social_networks/instagram.png" alt="instagram"></a>
+                    </div>
+                    <div class="footer__networks-item">
+                        <a href="#"><img src="icons/social_networks/twitter.png" alt="twitter"></a>
+                    </div>
+                    <div class="footer__networks-item">
+                        <a href="#"><img src="icons/social_networks/youtube.png" alt="youtube"></a>
+                    </div>
+                    <div class="footer__networks-item">
+                        <a href="#"><img src="icons/social_networks/facebook.png" alt="facebook"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__created">
+            <span>&#169;</span>
+            <p>All Rights Reserved By Mirage 2022</p>
+        </div>
+    </footer>
+    <script src="js/show.js"></script>
     <script src="js/slider.js"></script>
 </body>
 </html>
