Added classes to some paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     </div>
     <section class="services" id="services">
         <div class="container">
-            <h4 class="subtitle subtitle_center">Our Services</h4>
+            <h4 class="subtitle subtitle__services">Our Services</h4>
             <h2 class="title title_center">Why People Choose Us</h2>
             <div class="services__cards">
                 <div class="services__cards-item">
@@ -134,7 +134,7 @@
                 </div>
                 <div class="illustration__info">
                     <div class="illustration__block">
-                        <h4 class="subtitle">Design Things</h4>
+                        <h4 class="subtitle subtitle__design">Design Things</h4>
                     </div>
                     <h2 class="title">
                         We Loves To Design
@@ -171,7 +171,7 @@
                     </p>
                     <button class="button">Learn more</button>
                 </div>
-                <div class="illustration__img">
+                <div class="illustration__img teamwork__img">
                     <img src="img/illustrations/illustration_03.png" alt="illustration">
                 </div>
             </div>
@@ -188,7 +188,7 @@
                         <img src="img/people/man_01.png" alt="man">
                     </div>
                     <div class="testimonial__description">
-                        <h4 class="subtitle">Testimonial</h4>
+                        <h4 class="subtitle subtitle__testimonial">Testimonial</h4>
                         <h2 class="title">
                             Thats What Our 
                             Client Says About Us
@@ -216,7 +216,7 @@
                         <img src="img/people/man_02.png" alt="man">
                     </div>
                     <div class="testimonial__description">
-                        <h4 class="subtitle">Testimonial</h4>
+                        <h4 class="subtitle subtitle__testimonial">Testimonial</h4>
                         <h2 class="title">
                             Thats What Our 
                             Client Says About Us
@@ -244,7 +244,7 @@
                         <img src="img/people/man_03.png" alt="man">
                     </div>
                     <div class="testimonial__description">
-                        <h4 class="subtitle">Testimonial</h4>
+                        <h4 class="subtitle subtitle__testimonial">Testimonial</h4>
                         <h2 class="title">
                             Thats What Our 
                             Client Says About Us
