--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirage</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="icons/mirage.png"/>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/font.css">
@@ -39,10 +40,10 @@
             <header class="header">
                 <div class="logo">Mi<span>rage</span></div>
                 <nav class="header__menu">
-                    <a href="#services" class="header__link">Services</a>
-                    <a href="#design" class="header__link">Design</a>
-                    <a href="#teamwork" class="header__link">Teamwork</a>
-                    <a href="#partners" class="header__link">Partners</a>
+                    <a href="#services" class="header__link" data-aos="zoom-in" data-aos-duration="1500">Services</a>
+                    <a href="#design" class="header__link" data-aos="zoom-in" data-aos-duration="2000">Design</a>
+                    <a href="#teamwork" class="header__link" data-aos="zoom-in" data-aos-duration="2500">Teamwork</a>
+                    <a href="#partners" class="header__link" data-aos="zoom-in" data-aos-duration="3000">Partners</a>
                     <a href="#" class="header__hamburger">
                         <img src="icons/hamburger.png" alt="hamburger">
                     </a>
@@ -52,7 +53,7 @@
                 <div class="promo__info">
                     <div class="promo__block">
                         <div class="promo__divider"></div>
-                        <h4 class="subtitle">Creative Agency</h4>
+                        <h4 class="subtitle" data-aos="flip-up" data-aos-duration="2000">Creative Agency</h4>
                     </div>
                     <h1 class="promo__header">
                         We Deliver The Best
@@ -63,9 +64,9 @@
                         construction of an object or a system as in architectural<br> blueprints, 
                         engineering drawings, business processes.
                     </p>
-                    <a href="#services" class="button">Get started</a>
+                    <a href="#services" class="button" data-aos="zoom-out-up" data-aos-duration="3000">Get started</a>
                 </div>
-                <div class="promo__img">
+                <div class="promo__img" data-aos="fade-up" data-aos-duration="3000">
                     <img src="img/illustrations/illustration_01.png" alt="illustration">
                 </div>
             </div>
@@ -79,49 +80,33 @@
             <h4 class="subtitle subtitle__services">Our Services</h4>
             <h2 class="title title_center">Why People Choose Us</h2>
             <div class="services__cards">
-                <div class="services__cards-item">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
                     <img src="img/benefits/design.png" alt="design" class="services__cards-img">
                     <h3 class="title title__cards">Design</h3>
                     <p class="description description__cards">
                         a plan or drawing produced to show the look and function
                     </p>
-                    <div class="services__cards-more">
-                        <a href="#">Learn more</a>
-                        <img src="icons/arrows/next.png" alt="next">
-                    </div>
                 </div>
-                <div class="services__cards-item">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
                     <img src="img/benefits/development.png" alt="development" class="services__cards-img">
                     <h3 class="title title__cards">Development</h3>
                     <p class="description description__cards">
                         Development is defined as the process of growth
                     </p>
-                    <div class="services__cards-more">
-                        <a href="#">Learn more</a>
-                        <img src="icons/arrows/next.png" alt="next">
-                    </div>
                 </div>
-                <div class="services__cards-item">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
                     <img src="img/benefits/branding.png" alt="branding" class="services__cards-img">
                     <h3 class="title title__cards">Branding</h3>
                     <p class="description description__cards">
                         The marketing practice of creating a name, symbols
                     </p>
-                    <div class="services__cards-more">
-                        <a href="#">Learn more</a>
-                        <img src="icons/arrows/next.png" alt="next">
-                    </div>
                 </div>
-                <div class="services__cards-item">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
                     <img src="img/benefits/illustration.png" alt="illustration" class="services__cards-img">
                     <h3 class="title title__cards">Illustration</h3>
                     <p class="description description__cards">
                         An illustration is a decoration, interpretation
                     </p>
-                    <div class="services__cards-more">
-                        <a href="#">Learn more</a>
-                        <img src="icons/arrows/next.png" alt="next">
-                    </div>
                 </div>
             </div>
         </div>
@@ -129,7 +114,7 @@
     <section class="illustration" id="design">
         <div class="container">
             <div class="illustration__wrapper">
-                <div class="illustration__img">
+                <div class="illustration__img" data-aos="fade-down" data-aos-duration="1500">
                     <img src="img/illustrations/illustration_02.png" alt="illustration">
                 </div>
                 <div class="illustration__info">
@@ -145,12 +130,12 @@
                         influences their emotional<br> response and inspires them to take action.
                         It is a unifying<br> theme that can be used across all campaign messages 
                     </p>
-                    <button class="button">Learn more</button>
+                    <button class="button" data-aos="flip-up" data-aos-duration="1500">Learn more</button>
                 </div>
             </div>
         </div>
     </section>
-    <div class="bloob bloob-design">
+    <div class="bloob bloob-design" data-aos="fade-up" data-aos-duration="1000">
         <img src="icons/bloobs/right_bloob_01.png" alt="bloob">
     </div>
     <section class="illustration" id="teamwork">
@@ -169,16 +154,16 @@
                         a shared<br> goal. ... It is therefore a necessity that leaders facilitate<br> and build the teamwork 
                         skills of their people if they are 
                     </p>
-                    <button class="button">Learn more</button>
+                    <button class="button" data-aos="zoom-out-up">Learn more</button>
                 </div>
-                <div class="illustration__img teamwork__img">
+                <div class="illustration__img teamwork__img" data-aos="zoom-in" data-aos-duration="1200">
                     <img src="img/illustrations/illustration_03.png" alt="illustration">
                 </div>
             </div>
         </div>
     </section>
     <div class="bloob bloob-teamwork">
-        <img src="icons/bloobs/left_bloob_02.png" alt="bloob">
+        <img src="icons/bloobs/left_bloob_02.png" alt="bloob" data-aos="fade-up" data-aos-duration="1500">
     </div>
     <section class="testimonial">
         <div class="container">
@@ -346,6 +331,8 @@
             <p>All Rights Reserved By Mirage 2022</p>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/animate.js"></script>
     <script src="js/hamburger.js"></script>
     <script src="js/slider.js"></script>
 </body>
